@@ -1,3 +1,9 @@
+2009-03-02 Karsten Wiese <fzuuzf@googlemail.com>
+	* midiwidget.*: Fix crash if second controller is about to show
+	after 1st controller is bound to controllable.
+	* modularsynth.cpp: Cosmetics showing style I'd like other developers
+	to follow.....
+
 2009-02-24 Karsten Wiese <fzuuzf@googlemail.com>
 	* prefwidget.*, modularsynth.*: Boxes can be moved past the
 	topleft canvas border. Behaviour selectable via new tab in
